adds more finstagram posts content

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="../../../stylesheets/normalize.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">    
         <link rel="stylesheet" href="../../../stylesheets/lib.css">
+        <link rel="stylesheet" href="../../../stylesheets/app.css">
         <title>Finstagram</title>
     </head>
 <body>
@@ -10,14 +15,14 @@
         <h1>Finstagram</h1>
     </header>
     <main role="main">
-        <article class="finstagram.post">
+        <article class="finstagram-post">
             <div class="user-info">
-                <img src="https://media.istockphoto.com/photos/red-balloon-3d-rendering-picture-id1201224687?k=20&m=1201224687&s=612x612&w=0&h=VZUgCi7AGg-3jUhGdPLO8WtKl6n4lHhEbWVndk29pOE=" alt="red balloon">
-                <h2>red balloon</h2>
+                <img src="http://naserca.com/images/shark.png" alt="sharky_j">
+                <h2>sharky_j</h2>
                 <h3>15 mins ago</h3>
             </div>
             <a class="photo" href="#">
-                <img src="https://media.istockphoto.com/photos/red-balloon-3d-rendering-picture-id1201224687?k=20&m=1201224687&s=612x612&w=0&h=VZUgCi7AGg-3jUhGdPLO8WtKl6n4lHhEbWVndk29pOE=" alt="post from red balloon">
+                <img src="http://naserca.com/images/shark.png" alt="finstagram post from sharky_j">
             </a>
             <div class="actions">
                 0 likes
@@ -26,11 +31,55 @@
             <ul class="comments">
                 <li>
                     <p>
-                        red ballon: I am a red balloon
+                        sharky_j: out for the long weekend...excited to show y'all the beach bod!
+                    </p>
+                </li>
+            </ul>
+        </article>
+
+        <article class="finstagram-post">
+            <div class="user-info">
+                <img src="http://naserca.com/images/kirk_whalum.jpg" alt="kirk_whalum">
+                <h2>kirk_whalum</h2>>
+                <h3>1 hour ago</h3>
+            </div>
+            <a class="photo" href="#">
+                <img src="http://naserca.com/images/kirk_whalum.jpg" alt="finstagram post from kirk_whalum">
+            </a>
+            <div class="actions"> 
+                0 likes
+                <span class="comment-count">0 comments</span>
+            </div>
+            <ul class="comments">
+                <li>
+                    <p>
+                        kirk_whalum: #weekend vibes 
+                    </p>
+                </li>
+            </ul>
+        </article>
+
+        <article class="finstagram-post">
+            <div class="user info">
+                <img src="http://naserca.com/images/marlin_peppa.jpg" alt="marlin_peppa">
+                <h2>marlin_peppa</h2>
+                <h3>3 hours ago</h3>
+            </div>
+            <a class="photo" href="#">
+                <img src="http://naserca.com/images/marlin_peppa.jpg" alt="finstagram post from marlin_peppa">
+            </a>
+            <div class="actions">
+                0 likes 
+                <span class="comment-count">0 comments</span>
+            </div>
+            <ul class="comments">
+                <li>
+                    <p>
+                        marlin_peppa: lunchtime! ;) 
                     </p>
                 </li>
             </ul>
         </article>
     </main>
-    </body>
+    </bodys
 
