--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,7 +15,7 @@
         <h1>Finstagram</h1>
     </header>
     <main role="main">
-        <article class="finstagram-post">
+        <article class="finstagram_post">
             <div class="user-info">
                 <img src="http://naserca.com/images/shark.png" alt="sharky_j">
                 <h2>sharky_j</h2>
@@ -37,7 +37,7 @@
             </ul>
         </article>
 
-        <article class="finstagram-post">
+        <article class="finstagram_post">
             <div class="user-info">
                 <img src="http://naserca.com/images/kirk_whalum.jpg" alt="kirk_whalum">
                 <h2>kirk_whalum</h2>>
@@ -59,7 +59,7 @@
             </ul>
         </article>
 
-        <article class="finstagram-post">
+        <article class="finstagram_post">
             <div class="user info">
                 <img src="http://naserca.com/images/marlin_peppa.jpg" alt="marlin_peppa">
                 <h2>marlin_peppa</h2>
