--- a/app/views/finstagram_posts/new.erb
+++ b/app/views/finstagram_posts/new.erb
@@ -2,16 +2,16 @@
 
 <ul class="errors"> 
     <% @finstagram_post.errors.full_messages.each do |message| %> 
-        <li><%= message %><li>
+        <li><%= message %></li>
     <% end %> 
 </ul>
 
 <form action="/finstagram_posts" method="POST"> 
     <div class="form-group">
         <label for="photo_url">Photo URL</label>
-        <input type="text" id="photo_url" name="photor_url">
+        <input type="text" id="photo_url" name="photo_url">
     </div>
     <div class="form-group">
         <button class="button" type="submit">Post</button>
     </div>
-</form
+</form>
