--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,7 @@
             <h1>
                 <a href="/">Finstagram</a>
             </h1>
-            <div class-"login-info">
+            <div class="login-info">
                 <% if current_user %> 
                     <%= current_user.username %> 
                     <a href="/logout">Logout</a>
